--- a/posts/2017-08-21.md
+++ b/posts/2017-08-21.md
@@ -495,24 +495,22 @@ Why would this converge? What causes small changes to stop circulating?
 
 Ok, so they don't have to, it turns out. You could have a cycle, for example, in which every node has `rank = 1`, and so plans to distribute .. zero. But, if a single `+1` happens to change the rank, then it will now send a `+1` as an output. If each node in the cycle has an initial rank of `1` (or is otherwise poised to "not absorb" the next unit of rank it gets) each node will pass along the increment. Eventually, though, the increment circulates around and around and hits a node that wants to absorb its next unit of rank (it can't circulate forever without being absorbed, because each time it moves it increments a `rank`).
 
-This sound like it converges, so what is the problem? No problem, if all the changes are positive. Or if all the changes are negative. If there are positive and negative changes, problem.
+This sounds like it converges, so what is the problem? No problem, if all the changes are positive. Or if all the changes are negative. If there are positive and negative changes, problem.
 
-Imagine that cycle again, but with a `+1` change and a `-1` change, both going around the cycle. Each `+1` produces a new `+1` as output, and each `-1` produces retracts the change with a `-1` as output. Nothing is absorbed, and the cycle continues forever. Or, forever-ish.
+Imagine that cycle again, but with a `+1` change and a `-1` change, both going around the cycle. Each `+1` produces a new `+1` as output, and each `-1` produces a `-1` as output, retracting the change. Nothing is ever absorbed, and the cycle continues forever. Or, forever-ish.
 
 #### Stashing Updates
 
-One of the main features of the algorithm we implemented, called "Update Iteration" in the paper, is that we *don't have to propagate changes*. Each node can just sit on some received changes if it has a mind to. In the linked paper, these were for good reasons, like "I'll go faster if I wait". 
+One of the main features of the algorithm we implemented, called "Update Iteration" in the paper, is that we *don't have to propagate changes*. Each node can just sit on some received changes if it has a mind to. In the linked paper, these were for good reasons, like "I'll go faster if I wait". We are going to hold updates back because "we might not converge otherwise", which is a special case of "go faster".
 
-We are going to hold updates back because "we might not converge otherwise".
-
-There was a line in the code that indicated what we should do when we receive an update for a page `src`. It was pretty casual, and said we should just fold in the changes:
+There was previously a line in the code that indicated what we should do when we receive a rank update `diff` for a page `src`. It was pretty casual, and said we should just fold in the changes:
 
 ```rust
         // 2. update ranks.
         ranks[src] += diff;
 ```
 
-Ok, we aren't going to do that any more. Instead, we are going to maintain a stash of outstanding differences, `diffs`, and add `diff` to the corresponding entry. If the entry is now large enough, where I chose a threshold so that we would be certain to absorb at least some of `diff`, only then do we include the change and determine output differences.
+Ok, we aren't going to do that any more. Instead, we are going to maintain a stash of outstanding differences, `diffs`, and add `diff` to the corresponding entry. If the entry is now large enough, where I chose a threshold so that `src` would be certain to absorb at least some of `diff`, only then do we include the change and determine output differences.
 
 ```rust
         // 2. update ranks.
@@ -520,16 +518,16 @@ Ok, we aren't going to do that any more. Instead, we are going to maintain a sta
         if diffs[src].abs() >= 6 {
             ranks[src] += diffs[src];
             diffs[src] = 0;
-}
+        }
 ```
 
-Now, you might say "we may converge, but not to the right answer!", and that is .. true. We can always get the correct answer out, by only circulating positive updates for a while, then only circulating negative updates, but we can also not worry too much about it, because the amount we are holding back is within rounding error. We are holding the changes back because `5 * (ranks[src] + diff) / 6` equals `5 * ranks[src] / 6 + diff`; if that isn't true we can just send the changes along and be assured that the total error decreases. Hence the threshold `6`, by the way. We could also just directly test that rounding condition.
+Now, you might say "we may converge, but not to the right answer!", and that is .. true. We can always get the correct answer out, by only circulating positive updates for a while, then only circulating negative updates, but we can also not worry too much about it, because the amount we are holding back is within rounding error. We are holding the changes back because `5 * (ranks[src] + diff) / 6` equals `5 * ranks[src] / 6 + diff`; if that isn't true we can just send the changes along and be assured that the total error decreases. Hence the threshold `6`, by the way. We could also just directly test that rounding condition, if we had a mind to.
 
 #### Performance
 
-This "speeds up" the computation a bit, especially once we've started running and make few changes each round. If you recall from above, it took about 15 seconds (from `57.405` to `72.870`) to go from round 100 to round 1000. These are the rounds where we make sparse updates, and the only work in each round is the distribution of relatively small updates. With the change above, small updates are held back, leading to much less computation (and a different answer).
+This change "speeds up" the computation a bit, especially once we've started running and make relatively few changes each round. If you recall from above, it took about 15 seconds (from `57.405` to `72.870`) to go from round 100 to round 1000. These are the rounds where we make sparse updates (one change per round), and the only work in each round is the distribution of relatively small and relatively few updates. With the change above, the small updates are held back until they grow big enough, leading to much less computation (and a different answer).
 
-Specifically, it now takes under two seconds to move from round 100 to round 1000.
+It now takes under two seconds to move from round 100 to round 1000.
 
     Duration { secs: 59, nanos: 698451552 }:        (Root, 97)      3283    6936    361
     Duration { secs: 59, nanos: 700766979 }:        (Root, 98)      3611    7785    1016
@@ -550,6 +548,6 @@ Specifically, it now takes under two seconds to move from round 100 to round 100
     Duration { secs: 61, nanos: 427732237 }:        (Root, 1010)    42      45      3
     Duration { secs: 61, nanos: 427755162 }:        (Root, 1011)    21      21      1
 
-We do still end in a state where if we played forward all of the positive updates, and then all of the negative updates, we would still reach the same limit as above. We are just more circumspect while executing, to make sure we don't end up in some defective behavior.
+We do still end in a state where if we played forward all of the positive updates, and then all of the negative updates, we would still reach the same limit as before. We are just more circumspect while executing, to make sure we don't end up in some defective behavior.
 
-Plus, this also shows us how holding back updates can lead to improved performance. We have an order of magnitude higher throughput, and we only sacrifice accuracy transiently.
+Plus, holding back updates leads to improved performance. We have an order of magnitude higher throughput, and we only sacrifice accuracy transiently. Aren't we clever!
