--- a/posts/2017-09-05.md
+++ b/posts/2017-09-05.md
@@ -16,7 +16,7 @@ As it turns out, there are lots of features you would find in a database that st
 
 Databases build and maintain indices of data. This is super helpful if you need random access to the data, perhaps because you want to look up some things, or perhaps because you are doing joins and it would be a pain to rebuild the index each time you want to do a join.
 
-Stream processers also build and maintain indices of data, but they tend to do it independently each time you perform a join. Let's consider an example.
+Stream processors also build and maintain indices of data, but they tend to do it independently each time you perform a join. Let's consider an example.
 
 Imagine you have a collection of graph `nodes` and graph `edges`. You would like to compute (and perhaps maintain as changes stream along) those nodes that are "friends of friends": they result from joining `nodes` with `edges`, picking out reached nodes, and then joining with `edges` again:
 
@@ -191,7 +191,7 @@ Containing a bunch of helpful information, and the method the symbol resolves to
 
 4. Any arguments we want to pass to the method.
 
-These methods have great lattitude in terms of what they do. They could just screw around with the hashmap of resources, or they could build dataflow graphs that compute cool things and stick handles to the results back in the hashmap.
+These methods have great latitude in terms of what they do. They could just screw around with the hashmap of resources, or they could build dataflow graphs that compute cool things and stick handles to the results back in the hashmap.
 
 Let's check out a few examples!
 
@@ -261,7 +261,7 @@ The example up above assumed that we had already installed a graph (with name `a
 
 There is example code in [`dataflows/random_graph`](https://github.com/frankmcsherry/differential-dataflow/blob/master/server/dataflows/random_graph/src/lib.rs), which clocks in at a terrifying 146 lines of code. Most of this is related to graph generation rather than arrangement, so I'm going to start with a simplified version that assumes you've got a handle to a source of edges. For example, maybe you are trying out the new [Kafka adapter](https://github.com/frankmcsherry/timely-dataflow/tree/master/kafkaesque), or anything else implementing timely's [`EventIterator` trait](https://github.com/frankmcsherry/timely-dataflow/blob/master/src/dataflow/operators/capture/event.rs#L39-L46).
 
-The `Cargo.toml` file is pretty similar to that for degree distribution up above, with some additional depedencies for access to raw timely methods.
+The `Cargo.toml` file is pretty similar to that for degree distribution up above, with some additional dependencies for access to raw timely methods.
 
 The `lib.rs` is a bit more complicated, to the point that I've snipped out the code that actually determines which edge changes to produce (you can check out the repo for the full details). Instead, let's just look at the skeleton of the method:
 
@@ -368,7 +368,7 @@ In the interest of science, I've also put a timer in there so that we can see ho
 
 #### A Shared Library: Reachability
 
-This is pretty similar to the above, but with slighltly different code
+This is pretty similar to the above, but with slightly different code
 
 ```rust
 extern crate differential_dataflow;
@@ -549,4 +549,4 @@ Kafka seems really slow to me. I'm sure I'm driving it badly, but I'm reading da
 
 #### Performance
 
-There are a bunch of fun performance gotchas hidden in here. The random graph producer is open-loop, and just produces lots and lots of data, even if you fall behind. The batch merging that differential does as part of its internal LSM isn't amortized, so you can just get stuck behind a 6s merge operation (this can and will be fix, now that it is so easy to see).
+There are a bunch of fun performance gotchas hidden in here. The random graph producer is open-loop, and just produces lots and lots of data, even if you fall behind. The batch merging that differential does as part of its internal LSM isn't amortized, so you can just get stuck behind a 6s merge operation (this can and will be fixed, now that it is so easy to see).
