--- a/posts/2017-09-23.md
+++ b/posts/2017-09-23.md
@@ -18,11 +18,11 @@ As a caveat: My code might have bugs, I might be wrong about various things, et 
 
 To let you hop around, here are links to the three sections, each covering a different paper:
 
-1. [Scalable Distributed Subgraph Enumeration]() is a VLDB 2017 paper about finding undirected pattern graphs in larger undirected data graphs.
+1. [Scalable Distributed Subgraph Enumeration](https://github.com/frankmcsherry/blog/blob/master/posts/2017-09-23.md#paper-1-subgraph-enumeration) is a VLDB 2017 paper about finding undirected pattern graphs in larger undirected data graphs.
 
-2. [All-in-One: Graph Processing in RDBMSs Revisited]() is a SIGMOD 2017 paper about using SQL systems to do graph processing.
+2. [All-in-One: Graph Processing in RDBMSs Revisited](https://github.com/frankmcsherry/blog/blob/master/posts/2017-09-23.md#paper-2-graph-processing-using-sql) is a SIGMOD 2017 paper about using SQL systems to do graph processing.
 
-3. [Parallelizing Sequential Graph Computation]() is a SIGMOD 2017 *best* paper about iterating incremental graph algorithms.
+3. [Parallelizing Sequential Graph Computation](https://github.com/frankmcsherry/blog/blob/master/posts/2017-09-23.md#paper-3-parallelizing-sequential-graph-computations) is a SIGMOD 2017 *best* paper about iterating incremental graph algorithms.
 
 The conclusions are varying levels of violent depending on the paper. The laptop makes a pretty solid showing; databases reviewers come out rather badly.
 
