--- a/posts/2017-09-23.md
+++ b/posts/2017-09-23.md
@@ -12,7 +12,7 @@ This post is for you, databases community. <3
 
 We are going to look a few papers from the most recent iterations of VLDB and SIGMOD, which I think of as the premiere venues in the database community. I have a few other papers I'd like to use, but those papers don't have quantitative data (they have figures, but no numbers) and the authors haven't responded to inquiries for a week now (clever).
 
-As with the COST paper, we are going to try and understand to what degree the empirical results presented in these papers demonstrate that the implemented systems improve over a single-threaded implementation. That is a pretty low bar, and should something all reviewers require as a minimal test of non-triviality. Some of the systems will be better than a single-threaded implementation, on some problems, at some scales, but all of the papers have picked comically poor baselines that are nowhere near single-threaded laptop performance. 
+As with the COST paper, we are going to try and understand to what degree the empirical results presented in these papers demonstrate that the implemented systems improve over a single-threaded implementation. That is a pretty low bar, and should be something all reviewers require as a minimal test of non-triviality. Some of the systems will be better than a single-threaded implementation, on some problems, at some scales, but all of the papers have picked comically poor baselines that are nowhere near single-threaded laptop performance. 
 
 As a caveat: My code might have bugs, I might be wrong about various things, et cetera. However, I'm doing all of these measurements *because the papers declined to do so*. None of them present any evidence that they are any better than a single-threaded implementation on any problem at any scale. So, if nothing else the published papers are not yet right. But I suspect they are mostly wrong.
 
@@ -46,7 +46,7 @@ With these queries in mind, we are going to (i) review several measurements from
 
 Now, we are going to introduce some new candidates for "state-of-the-art" algorithms, by writing some for-loops and running them on my laptop. For a few queries (`q1`, `q2`, `q3`, and `q7`) we will have an apples-to-apples comparison; for these I enumerate all solutions and do at least one CPU operation for each output (testing whether equal to `u32::max_value()` before incrementing the count). The queries `q2`, `q5`, and `q6` spend a non-trivial amount of time enumerating, rather than computing, solutions; for these queries we have a `*` variant (which I'll explain in turn) that measures the amount of time to produce a constant time enumerator over the solutions. The query `q4` looked hard and dull, so I ignored it.
 
-All of our candidate computations parallelize trivially: you partition responsibility for the first vertex `v1` using `v1 % workers`, and each worker independently enumerates solutions in their purview. My laptop has two cores and two hyper threads, so we will measure 1, 2, and 4 workers. The measurements of prior work are from a cluster with 160 cores, and so we also report on a hypothetical 160-core laptop, where we partition the work a 160 ways, and report the maximum time taken across them when executed sequentially; this is a totally fictitious measurement, but it represents what one should be able to achieve, rather than improvements over Hadoop/Pregel baselines.
+All of our candidate computations parallelize trivially: you partition responsibility for the first vertex `v1` using `v1 % workers`, and each worker independently enumerates solutions in their purview. My laptop has two cores and two hyper threads, so we will measure 1, 2, and 4 workers. The measurements of prior work are from a cluster with 160 cores, and so we also report on a hypothetical 160-core laptop, where we partition the work 160 ways, and report the maximum time taken across them when executed sequentially; this is a totally fictitious measurement, but it represents what one should be able to achieve, rather than improvements over Hadoop/Pregel baselines.
 
 There are two datasets for which the paper reports performance on all queries, a YouTube graph and the standard LiveJournal graph. Remember, the `*` query variants are relaxed versions that just prepare enumerators, and `Laptop*` is the maximum of 160 elapsed times rather than the actual elapsed time of a full run itself. 
 
