--- a/posts/2017-09-23.md
+++ b/posts/2017-09-23.md
@@ -75,7 +75,7 @@ Let's look at the LiveJournal numbers. I added a row for [EmptyHeaded](https://p
 |     Laptop  |   2+2 | 321s |   30s |   13s |   22s  |     - |     - |   11s |     - |  138s |   761s |
 |     Laptop* |   160 | 6.98s| 740ms | 314ms | 472ms  |     - |     - | 258ms |     - | 3.13s |    17s |
 
-These numbers are more interesting. First, for `q1` the laptop is now never faster than the cluster. However, `SEED` is barely faster, and still much slower than a naive 160-way partitioning could be, in principle. Second, I didn't complete any `q6` measurements here, partly because the number of matches roughly 18 trillion (it would take ~6000 seconds for one 3Ghz core just to perform 18 trillion increment ops); I did count the matches exactly though, in `q6*`. Finally, for `q7` we now have `SEED` in the running (briefly) against the laptop; there are many more 5-cliques in LiveJournal (roughly half a trillion) than in YouTube (roughly 70 million), and it makes sense that more machines might help. Other numbers are similar to the above, with the laptop often faster than `SEED`.
+These numbers are more interesting. First, for `q1` the laptop is now never faster than the cluster. However, `SEED` is barely faster, and still much slower than a naive 160-way partitioning could be, in principle. Second, I didn't complete any `q6` measurements here, partly because the number of matches is roughly 18 trillion (it would take ~6000 seconds for one 3Ghz core just to perform 18 trillion increment ops); I did count the matches exactly though, in `q6*`. Finally, for `q7` we now have `SEED` in the running (briefly) against the laptop; there are many more 5-cliques in LiveJournal (roughly half a trillion) than in YouTube (roughly 70 million), and it makes sense that more machines might help. Other numbers are similar to the above, with the laptop often faster than `SEED`.
 
 Now, the authors are apparently aware of centralized (i.e. non-Hadoop) solutions, like the ones we implement, but worry that
 
