--- a/posts/2017-09-23.md
+++ b/posts/2017-09-23.md
@@ -98,7 +98,7 @@ For the actual measurements, we didn't exactly see the claimed scaling failure, 
 
 #### Implementations 
 
-To start things out, let's talk about how we represent our data. We are going to use an [adjacency-list](https://en.wikipedia.org/wiki/Adjacency_list) represenation. For each vertex, we will have a *sorted* list of the other vertices to which it is connected. For *reasons*, we will also track for each vertex the number of neighbors whose identifier is less than that of the vertex, so that we can quickly get both (i) the list of all neighbors, and (ii) the list of neighbors with greater identifier (this helps us restrict our attention to neighbors satisfying the `<` constraints).
+To start things out, let's talk about how we represent our data. We are going to use an [adjacency-list](https://en.wikipedia.org/wiki/Adjacency_list) representation. For each vertex, we will have a *sorted* list of the other vertices to which it is connected. For *reasons*, we will also track for each vertex the number of neighbors whose identifier is less than that of the vertex, so that we can quickly get both (i) the list of all neighbors, and (ii) the list of neighbors with greater identifier (this helps us restrict our attention to neighbors satisfying the `<` constraints).
 
 As is apparently standard, we re-label the vertices so that the undirected degree of the vertices is non-decreasing as identifiers increase. The high-degree folks will have the highest identifiers. There is a good reason for this, but it is mainly that it makes things go faster and everyone else does it so we will too. What this really means is that when we break symmetries, we break them using degree before identifier.
 
@@ -167,7 +167,7 @@ That's really all. I tried to go with fairly direct implementations that took ad
 
 Scaling out to multiple workers is pretty trivial; you just specify `peers` to be as many workers as you have, and start up tasks with `index` ranging from `0` to `peers`. That's how I got the numbers I used. Each worker introduces some additional overhead in the form of a few more vectors of adjacency list stash, some thread overhead, etc., but they all read the same read-only `GraphMap` adjacency lists. If you wanted to use multiple machines, you just give each machine a copy of the graph; they are mainly small. The resulting times, at least the maximum time over the 160 parts, suggests that naive parallelization could be very efficient, and much faster than the numbers `SEED` produces.
 
-I hope we now have a better handle on baselines for subgraph enumeration. The `SEED` paper does have some ideas that I think are fine, in that you should index things other than just edges, if you have the resources to swing it (I don't, for Friendster, but do for the other graphs). At the same time, their absolute numbers are hard to use; when I mocked up their approach of pre-computing and indexing all triangles, the times for `q2` and `q3` dropped by a relatively modest 12 seconds each. When the evalution of a paper's contribution rests soley on experimental measurement, we need better baselines (and better implementations) to tell if the new ideas produced broad gains; the measurements in this paper tell us mostly that the authors have improved their code base from two years ago.
+I hope we now have a better handle on baselines for subgraph enumeration. The `SEED` paper does have some ideas that I think are fine, in that you should index things other than just edges, if you have the resources to swing it (I don't, for Friendster, but do for the other graphs). At the same time, their absolute numbers are hard to use; when I mocked up their approach of pre-computing and indexing all triangles, the times for `q2` and `q3` dropped by a relatively modest 12 seconds each. When the evaluation of a paper's contribution rests solely on experimental measurement, we need better baselines (and better implementations) to tell if the new ideas produced broad gains; the measurements in this paper tell us mostly that the authors have improved their code base from two years ago.
 
 Many of the COST numbers for this work are unbounded, unfortunately. The authors do have some scaling numbers for `q2` and `q7` on LiveJournal, their Figure 9, in which we can see that the COST for `q7` on LiveJournal is 8x16 cores, and the COST for `q2` is greater than 14x16 cores (their largest configuration). We don't know anything about the COSTs of `q4`, `q5`, and `q6`, because we didn't properly evaluate those here, but I think it is fair to be skeptical.
 
@@ -187,7 +187,7 @@ It can be difficult to quantify "reasonable" time. It will not be faster than a 
 
 One quantification of "unreasonable"-ness could be that the reported times are larger than those in ["The case against specialized graph analytics engines"](http://pages.cs.wisc.edu/~jignesh/publ/Grail.pdf), a CIDR 2015 paper proposing that people should do graph processing using SQL, which happens *not* to be behind a paywall (read it instead).
 
-The CIDR paper, amazingly, reads like a follow-on to the 2017 SIGMOD paper, studing computations on *larger* graphs and getting *better* results. Only, it was published more than two years *earlier*, in the same community. I don't really understand.
+The CIDR paper, amazingly, reads like a follow-on to the 2017 SIGMOD paper, studying computations on *larger* graphs and getting *better* results. Only, it was published more than two years *earlier*, in the same community. I don't really understand.
 
 The "All-in-One" paper is, however, aware of this work, addressing it in its related work section thusly:
 
@@ -237,7 +237,7 @@ The WCC numbers use the same algorithm (label propagation) the other papers use,
 
 Let's leave the SIGMOD 2017 paper behind, and advance to measurements on graphs that require at least a gigabyte to represent. I'm talking about `twitter_rv` and `uk_2007_05`, both of which the CIDR 2015 paper has measurements for, and on both of which Malte and I have [previously evaluated timely PageRank](https://github.com/frankmcsherry/blog/blob/master/posts/2015-07-08.md).
 
-First, let's check out the CIDR measurments, which include fewer of the graph processing systems (Giraph and GraphLab) because apparently they run out of memory or crash or whatever. It's ok to make fun; they've all made lots of money.
+First, let's check out the CIDR measurements, which include fewer of the graph processing systems (Giraph and GraphLab) because apparently they run out of memory or crash or whatever. It's ok to make fun; they've all made lots of money.
 
 ![CIDR](https://github.com/frankmcsherry/blog/blob/master/assets/databases/cidr_tw_uk.png)
 
@@ -283,7 +283,7 @@ Single-threaded time to do graph connectivity on LiveJournal?
 
 ![Tweeted](https://github.com/frankmcsherry/blog/blob/master/assets/databases/tweeted.png)
 
-Either one second, or half a second, depending on whether you do use adjacency lists or that Hilbert curve preprocessing thing. And it goes faster with two threads, because we evaulated that in the COST paper (although admittedly on a much larger graph).
+Either one second, or half a second, depending on whether you do use adjacency lists or that Hilbert curve preprocessing thing. And it goes faster with two threads, because we evaluated that in the COST paper (although admittedly on a much larger graph).
 
 #### Thoughts
 
