--- a/posts/2017-09-23.md
+++ b/posts/2017-09-23.md
@@ -155,7 +155,7 @@ Let's now talk through each of the queries, so that I can explain what got done.
 
 6.  Query 6 is also a house with a roof, but this house is a clique. Another way to view `q6` is as a three-truss (remember them?), an edge (`(v2, v5)`) with three incident triangles (described by `v1`, `v3`, and `v4`), with the additional constraint that there is a forward edge from `v3` to `v4`. As with the two-truss query `q2` we compute and stash all triangle-completing vertices for the edge `(v2, v5)`. We then enumerate `v3` from the stashed list, enumerate `v4` by intersecting forward edges of `v3` with the stashed list, and then for each match we play out all `v1` from the stashed list.
 
-    This query is a good example where it is much more expensive to actually enumerate the solutions than to describe them (by pointing at the stashed list, rather than walking through all `v1` values). Our `q6*` measurement produces all `(v2, v3, v4, v5)` matches and then points at the unchanging stashed list for the `v1`. As with `q2` and q5`, each of the enumerated results are valid, and any correct algorithm must pay the difference between `q6` and `q6*`. We could eventually enumerate all matches, and using more machines would make it go faster for sure, but the meaningful *computation* happened long ago.
+    This query is a good example where it is much more expensive to actually enumerate the solutions than to describe them (by pointing at the stashed list, rather than walking through all `v1` values). Our `q6*` measurement produces all `(v2, v3, v4, v5)` matches and then points at the unchanging stashed list for the `v1`. As with `q2` and `q5`, each of the enumerated results are valid, and any correct algorithm must pay the difference between `q6` and `q6*`. We could eventually enumerate all matches, and using more machines would make it go faster for sure, but the meaningful *computation* happened long ago.
 
     We can *count* the number of solutions, by replacing the enumeration of `v1` by the addition of `stashed.len() - 2` to the count of all matches (we need to subtract two because `v1` must be distinct from `v3` and `v4`, which are by construction in the stashed list). In the case of LiveJournal there are over 18 trillion matches (specifically: 18,841,835,780,333), which is much easier to count up to in steps of `stashed.len() - 2` than in steps of one. 
 
