--- a/posts/2017-09-23.md
+++ b/posts/2017-09-23.md
@@ -243,7 +243,7 @@ First, let's check out the CIDR measurements, which include fewer of the graph p
 
 We are now up in the thousands of seconds! Wow. Big numbers.
 
-Let's break out the timely dataflow numbers on a single machine, which also report how long a single thread takes to do the work:
+Let's break out the timely dataflow numbers for PageRank on a single machine, which also report how long a single thread takes to do the work:
 
 ![Timely](https://github.com/frankmcsherry/blog/blob/master/assets/databases/pr-multithreaded.png)
 
