--- a/posts/2017-10-23.md
+++ b/posts/2017-10-23.md
@@ -38,7 +38,7 @@ The intent is that the output changes should exactly correspond to the input cha
 
     sum_{s <= t} dist_changes[s] = BFS(sum_{s <= t} edge_changes[s])
 
-Let's look at a small example, which may or may not be instructive. Let's imagine that I have the following edge changes as input:
+Let's look at a small example, which may or may not be instructive. Let's imagine that I have the following edge changes as input, where the structure is `((src, dst), time, diff)`:
 
     ((1, 1), 0, 1)
     ((2, 1), 0, 1)
@@ -195,14 +195,14 @@ While this computation only reports the set of nodes reachable from an element o
 
 Both the `semijoin` and `distinct` operators communicate to differential dataflow that the type of data is not `(key, val)` pairs, but rather just `key` records. The representation of the data simplify substantially, but a more important thing happen too, which starts to show up in the improved numbers:
 
-|             |   small |   large |
-|------------:|--------:|--------:|
-| 10 x 100000 | 114.84s |  89.20s |
-| 100 x 10000 |  50.88s |  61.64s |
-| 1000 x 1000 |  26.85s |  44.50s |
-| 10000 x 100 |  29.22s |  32.69s |
-| 100000 x 10 |  32.29s |  26.52s |
-| 1000000 x 1 |  31.42s |  18.02s |
+| differential |   small |   large |
+|-------------:|--------:|--------:|
+|  10 x 100000 | 114.84s |  89.20s |
+|  100 x 10000 |  50.88s |  61.64s |
+|  1000 x 1000 |  26.85s |  44.50s |
+|  10000 x 100 |  29.22s |  32.69s |
+|  100000 x 10 |  32.29s |  26.52s |
+|  1000000 x 1 |  31.42s |  18.02s |
 
 The important thing that is happening is that the collections *change less*. When we are pondering the 7th iteration, in which many nodes have already been reached, it is not wildly helpful to get a summary of existing changes as "was at distance 5, then later at distance 4, now at distance 6". All of those changes contain much more detail than we need to answer "in this, the 7th iteration, are there changes to reachability?". By reducing down to just a boolean "already reachable" the input history has fewer changes, and we perform less work to see how that changes in each subsequent iteration. In this example, we would be able to ignore rounds where the only change to a node's distance was from one value less than seven to another.
 
@@ -212,7 +212,7 @@ Importantly, we still do *have* all of this data, because the histories do need 
 
 Our differential dataflow implementation starts by loading the initial graph edges (either 2k or 10m edges), then doing various rounds of computation, and finally calling it quits and terminating. This means that at each of these points, just after loading, between each round, and just before terminating, the system needs to have a representation of its history that supports arbitrary future changes. 
 
-The COST implementation requires none of this, doing a single batch of work, and so can perform all of its updates in-place.
+The COST implementation requires none of this, as it does a single batch of work, and so can perform all of its updates in-place.
 
 We can do the same thing in differential dataflow, though effecting it is a bit indirect and a bit subtle. 
 
